# tokenize

./: tokenize.cabal
Data/: Regex.hs  SRX.hs  Token.hs
Data/Regex/: Parse.hs
Text/: SRX.hs
Text/Regex/: Parse.hs
Text/Tokenize/: SRX.hs
Text/Tokenize/Simple/: String.hs
Text/Tokenize/Util/: String.hs
config/: segment.srx
examples/: Test.hs  Test2.hs
