Name:               tokenize
Version:            0.0.1
Synopsis:           Tokenization utilities
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.Token
		    Data.SRX
		    Data.Regex
		    Data.Regex.Parse
		    Text.Tokenize.Simple.String
		    Text.Tokenize.Util.String
		    Text.Tokenize.SRX
		    Text.SRX
		    Text.Regex.Parse
Other-modules:      Paths_tokenize
Build-Depends:      base
                  , containers
                  , regex-applicative
                  , regex-pcre
                  , utf8-string
                  , polyparse
                  , polysoup
Data-files:         config/segment.srx
